tests/application/access-policy-cross-namespace/consumer-not-ready.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: consumer
status:
  accessPolicies: InvalidConfig
  applicationKind: Deployment
  conditions:
    - type: Ready
      status: "False"
      reason: InvalidConfig
    - type: InternalRulesValid
      status: "False"
      reason: ApplicationReconciled
