tests/application/access-policy-cross-namespace/consumer-ready.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: consumer
status:
  accessPolicies: Ready
  applicationKind: Deployment
  conditions:
    - type: Ready
      status: "True"
      reason: Reconciled
    - type: InternalRulesValid
      status: "True"
      reason: ApplicationReconciled
    - type: ExternalRulesValid
      status: "True"
      reason: ApplicationReconciled
