tests/application/access-policy-cross-namespace/consumer.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: consumer
spec:
  image: nginxinc/nginx-unprivileged:latest
  port: 8080
  accessPolicy:
    outbound:
      rules:
        - application: cross-namespace-target
          namespace: access-policy-cross-namespace-target
