tests/application/access-policy-cross-namespace/target.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: access-policy-cross-namespace-target
---
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: cross-namespace-target
  namespace: access-policy-cross-namespace-target
spec:
  image: nginxinc/nginx-unprivileged:latest
  port: 8080
